Added /reportStop to the API of the instance registry. Implemented the endpoint.
